commit bilingual contents

--- a/docs/docs-ref-autogen/visio/visio/visio.interfaces.shapedataitemdata.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.interfaces.shapedataitemdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'visio!Visio.Interfaces.ShapeDataItemData:interface'
-    summary: <span data-ttu-id="13194-101">描述通过调用 "shapeDataItem （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="13194-101">An interface describing the data returned by calling "shapeDataItem.toJSON()".</span></span>
+    summary: 描述通过调用 "shapeDataItem （）" 返回的数据的接口。
     name: Visio.Interfaces.ShapeDataItemData
     fullName: Visio.Interfaces.ShapeDataItemData
     langs:
@@ -15,9 +15,9 @@ items:
       - 'visio!Visio.Interfaces.ShapeDataItemData#value:member'
   - uid: 'visio!Visio.Interfaces.ShapeDataItemData#format:member'
     summary: |-
-      <span data-ttu-id="13194-102">指定形状数据项格式的字符串。</span><span class="sxs-lookup"><span data-stu-id="13194-102">A string that specifies the format of the shape data item.</span></span> <span data-ttu-id="13194-103">只读。</span><span class="sxs-lookup"><span data-stu-id="13194-103">Read-only.</span></span>
+      指定形状数据项格式的字符串。 只读。
 
-      <span data-ttu-id="13194-104">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="13194-104">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: format
     fullName: format
     langs:
@@ -30,9 +30,9 @@ items:
           - string
   - uid: 'visio!Visio.Interfaces.ShapeDataItemData#formattedValue:member'
     summary: |-
-      <span data-ttu-id="13194-105">指定形状数据项格式值的字符串。</span><span class="sxs-lookup"><span data-stu-id="13194-105">A string that specifies the formatted value of the shape data item.</span></span> <span data-ttu-id="13194-106">只读。</span><span class="sxs-lookup"><span data-stu-id="13194-106">Read-only.</span></span>
+      指定形状数据项格式值的字符串。 只读。
 
-      <span data-ttu-id="13194-107">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="13194-107">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: formattedValue
     fullName: formattedValue
     langs:
@@ -45,9 +45,9 @@ items:
           - string
   - uid: 'visio!Visio.Interfaces.ShapeDataItemData#label:member'
     summary: |-
-      <span data-ttu-id="13194-108">指定形状数据项标签的字符串。</span><span class="sxs-lookup"><span data-stu-id="13194-108">A string that specifies the label of the shape data item.</span></span> <span data-ttu-id="13194-109">只读。</span><span class="sxs-lookup"><span data-stu-id="13194-109">Read-only.</span></span>
+      指定形状数据项标签的字符串。 只读。
 
-      <span data-ttu-id="13194-110">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="13194-110">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: label
     fullName: label
     langs:
@@ -60,9 +60,9 @@ items:
           - string
   - uid: 'visio!Visio.Interfaces.ShapeDataItemData#value:member'
     summary: |-
-      <span data-ttu-id="13194-111">指定形状数据项值的字符串。</span><span class="sxs-lookup"><span data-stu-id="13194-111">A string that specifies the value of the shape data item.</span></span> <span data-ttu-id="13194-112">只读。</span><span class="sxs-lookup"><span data-stu-id="13194-112">Read-only.</span></span>
+      指定形状数据项值的字符串。 只读。
 
-      <span data-ttu-id="13194-113">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="13194-113">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: value
     fullName: value
     langs:
