--- a/docs/docs-ref-autogen/visio/visio/visio.interfaces.shapeviewupdatedata.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.interfaces.shapeviewupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'visio!Visio.Interfaces.ShapeViewUpdateData:interface'
-    summary: '<span data-ttu-id="88660-101">一个用于更新 ShapeView 对象上的数据的接口，可用于 "shapeView （</span><span class="sxs-lookup"><span data-stu-id="88660-101">An interface for updating data on the ShapeView object, for use in "shapeView.set(</span></span><!-- --><span data-ttu-id="88660-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="88660-102"></span></span><!-- --><span data-ttu-id="88660-103">)".</span><span class="sxs-lookup"><span data-stu-id="88660-103"></span></span>'
+    summary: '一个用于更新 ShapeView 对象上的数据的接口，可用于 "shapeView （<!-- -->{ ... }<!-- -->)".'
     name: Visio.Interfaces.ShapeViewUpdateData
     fullName: Visio.Interfaces.ShapeViewUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'visio!Visio.Interfaces.ShapeViewUpdateData#highlight:member'
   - uid: 'visio!Visio.Interfaces.ShapeViewUpdateData#highlight:member'
     summary: |-
-      <span data-ttu-id="88660-104">表示形状周围的突出显示内容。</span><span class="sxs-lookup"><span data-stu-id="88660-104">Represents the highlight around the shape.</span></span>
+      表示形状周围的突出显示内容。
 
-      <span data-ttu-id="88660-105">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="88660-105">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: highlight
     fullName: highlight
     langs:
