--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.nameditemarrayvaluesloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.nameditemarrayvaluesloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.NamedItemArrayValuesLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="d6ff7-101">表示一个包含已命名项目的值和类型的对象。</span><span class="sxs-lookup"><span data-stu-id="d6ff7-101">Represents an object containing values and types of a named item.</span></span>
+      表示一个包含已命名项目的值和类型的对象。
 
-      <span data-ttu-id="d6ff7-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d6ff7-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.NamedItemArrayValuesLoadOptions
     fullName: Excel.Interfaces.NamedItemArrayValuesLoadOptions
     langs:
@@ -16,7 +16,7 @@ items:
       - 'excel!Excel.Interfaces.NamedItemArrayValuesLoadOptions#types:member'
       - 'excel!Excel.Interfaces.NamedItemArrayValuesLoadOptions#values:member'
   - uid: 'excel!Excel.Interfaces.NamedItemArrayValuesLoadOptions#$all:member'
-    summary: '<span data-ttu-id="d6ff7-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="d6ff7-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="d6ff7-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="d6ff7-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="d6ff7-105">).</span><span class="sxs-lookup"><span data-stu-id="d6ff7-105"></span></span>'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemArrayValuesLoadOptions#types:member'
     summary: |-
-      <span data-ttu-id="d6ff7-106">表示已命名项目数组中每个项目的类型</span><span class="sxs-lookup"><span data-stu-id="d6ff7-106">Represents the types for each item in the named item array</span></span>
+      表示已命名项目数组中每个项目的类型
 
-      <span data-ttu-id="d6ff7-107">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d6ff7-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: types
     fullName: types
     langs:
@@ -44,9 +44,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemArrayValuesLoadOptions#values:member'
     summary: |-
-      <span data-ttu-id="d6ff7-108">表示已命名项目数组中每个项目的值。</span><span class="sxs-lookup"><span data-stu-id="d6ff7-108">Represents the values of each item in the named item array.</span></span>
+      表示已命名项目数组中每个项目的值。
 
-      <span data-ttu-id="d6ff7-109">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d6ff7-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: values
     fullName: values
     langs:
