--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivothierarchyupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivothierarchyupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.PivotHierarchyUpdateData:interface'
-    summary: '<span data-ttu-id="dc779-101">一个用于更新 PivotHierarchy 对象上的数据的接口，可用于`pivotHierarchy.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="dc779-101">An interface for updating data on the PivotHierarchy object, for use in `pivotHierarchy.set({ ... })`</span></span><!-- --><span data-ttu-id="dc779-102">.</span><span class="sxs-lookup"><span data-stu-id="dc779-102"></span></span>'
+    summary: '一个用于更新 PivotHierarchy 对象上的数据的接口，可用于`pivotHierarchy.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.PivotHierarchyUpdateData
     fullName: Excel.Interfaces.PivotHierarchyUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.PivotHierarchyUpdateData#name:member'
   - uid: 'excel!Excel.Interfaces.PivotHierarchyUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="dc779-103">PivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="dc779-103">Name of the PivotHierarchy.</span></span>
+      PivotHierarchy 的名称。
 
-      <span data-ttu-id="dc779-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dc779-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
