--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rowcolumnpivothierarchycollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rowcolumnpivothierarchycollectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RowColumnPivotHierarchyCollectionData:interface'
-    summary: <span data-ttu-id="c281e-101">描述通过调用返回的数据的接口`rowColumnPivotHierarchyCollection.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="c281e-101">An interface describing the data returned by calling `rowColumnPivotHierarchyCollection.toJSON()`</span></span><!-- --><span data-ttu-id="c281e-102">.</span><span class="sxs-lookup"><span data-stu-id="c281e-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`rowColumnPivotHierarchyCollection.toJSON()`<!-- -->.
     name: Excel.Interfaces.RowColumnPivotHierarchyCollectionData
     fullName: Excel.Interfaces.RowColumnPivotHierarchyCollectionData
     langs:
