--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.runtimeupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.runtimeupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RuntimeUpdateData:interface'
-    summary: '<span data-ttu-id="7876d-101">一个用于更新运行时对象上的数据的接口，可用于`runtime.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="7876d-101">An interface for updating data on the Runtime object, for use in `runtime.set({ ... })`</span></span><!-- --><span data-ttu-id="7876d-102">.</span><span class="sxs-lookup"><span data-stu-id="7876d-102"></span></span>'
+    summary: '一个用于更新运行时对象上的数据的接口，可用于`runtime.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.RuntimeUpdateData
     fullName: Excel.Interfaces.RuntimeUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.RuntimeUpdateData#enableEvents:member'
   - uid: 'excel!Excel.Interfaces.RuntimeUpdateData#enableEvents:member'
     summary: |-
-      <span data-ttu-id="7876d-103">切换当前任务窗格或内容加载项中的 JavaScript 事件。</span><span class="sxs-lookup"><span data-stu-id="7876d-103">Toggle JavaScript events in the current task pane or content add-in.</span></span>
+      切换当前任务窗格或内容加载项中的 JavaScript 事件。
 
-      <span data-ttu-id="7876d-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7876d-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: enableEvents
     fullName: enableEvents
     langs:
