--- a/docs/docs-ref-autogen/visio/visio/visio.interfaces.pagecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.interfaces.pagecollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'visio!Visio.Interfaces.PageCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="49688-101">一个用于更新 PageCollection 对象上的数据的接口，可用于 "pageCollection （</span><span class="sxs-lookup"><span data-stu-id="49688-101">An interface for updating data on the PageCollection object, for use in "pageCollection.set(</span></span><!-- --><span data-ttu-id="49688-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="49688-102"></span></span><!-- --><span data-ttu-id="49688-103">)".</span><span class="sxs-lookup"><span data-stu-id="49688-103"></span></span>'
+    summary: '一个用于更新 PageCollection 对象上的数据的接口，可用于 "pageCollection （<!-- -->{ ... }<!-- -->)".'
     name: Visio.Interfaces.PageCollectionUpdateData
     fullName: Visio.Interfaces.PageCollectionUpdateData
     langs:
