--- a/docs/docs-ref-autogen/visio/visio/visio.interfaces.shapedataitemcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.interfaces.shapedataitemcollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'visio!Visio.Interfaces.ShapeDataItemCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="3d536-101">表示给定形状的 ShapeDataItemCollection 对象。</span><span class="sxs-lookup"><span data-stu-id="3d536-101">Represents the ShapeDataItemCollection for a given Shape.</span></span>
+      表示给定形状的 ShapeDataItemCollection 对象。
 
-      <span data-ttu-id="3d536-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="3d536-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.Interfaces.ShapeDataItemCollectionLoadOptions
     fullName: Visio.Interfaces.ShapeDataItemCollectionLoadOptions
     langs:
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: 'visio!Visio.Interfaces.ShapeDataItemCollectionLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="3d536-103">对于集合中的每一项：一个指定形状数据项的格式的字符串。</span><span class="sxs-lookup"><span data-stu-id="3d536-103">For EACH ITEM in the collection: A string that specifies the format of the shape data item.</span></span> <span data-ttu-id="3d536-104">只读。</span><span class="sxs-lookup"><span data-stu-id="3d536-104">Read-only.</span></span>
+      对于集合中的每一项：一个指定形状数据项的格式的字符串。 只读。
 
-      <span data-ttu-id="3d536-105">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="3d536-105">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: format
     fullName: format
     langs:
@@ -45,9 +45,9 @@ items:
           - boolean
   - uid: 'visio!Visio.Interfaces.ShapeDataItemCollectionLoadOptions#formattedValue:member'
     summary: |-
-      <span data-ttu-id="3d536-106">对于集合中的每一项：一个字符串，用于指定形状数据项的格式值。</span><span class="sxs-lookup"><span data-stu-id="3d536-106">For EACH ITEM in the collection: A string that specifies the formatted value of the shape data item.</span></span> <span data-ttu-id="3d536-107">只读。</span><span class="sxs-lookup"><span data-stu-id="3d536-107">Read-only.</span></span>
+      对于集合中的每一项：一个字符串，用于指定形状数据项的格式值。 只读。
 
-      <span data-ttu-id="3d536-108">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="3d536-108">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: formattedValue
     fullName: formattedValue
     langs:
@@ -60,9 +60,9 @@ items:
           - boolean
   - uid: 'visio!Visio.Interfaces.ShapeDataItemCollectionLoadOptions#label:member'
     summary: |-
-      <span data-ttu-id="3d536-109">对于集合中的每一项：一个指定形状数据项的标签的字符串。</span><span class="sxs-lookup"><span data-stu-id="3d536-109">For EACH ITEM in the collection: A string that specifies the label of the shape data item.</span></span> <span data-ttu-id="3d536-110">只读。</span><span class="sxs-lookup"><span data-stu-id="3d536-110">Read-only.</span></span>
+      对于集合中的每一项：一个指定形状数据项的标签的字符串。 只读。
 
-      <span data-ttu-id="3d536-111">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="3d536-111">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: label
     fullName: label
     langs:
@@ -75,9 +75,9 @@ items:
           - boolean
   - uid: 'visio!Visio.Interfaces.ShapeDataItemCollectionLoadOptions#value:member'
     summary: |-
-      <span data-ttu-id="3d536-112">对于集合中的每一项：一个指定形状数据项的值的字符串。</span><span class="sxs-lookup"><span data-stu-id="3d536-112">For EACH ITEM in the collection: A string that specifies the value of the shape data item.</span></span> <span data-ttu-id="3d536-113">只读。</span><span class="sxs-lookup"><span data-stu-id="3d536-113">Read-only.</span></span>
+      对于集合中的每一项：一个指定形状数据项的值的字符串。 只读。
 
-      <span data-ttu-id="3d536-114">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="3d536-114">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: value
     fullName: value
     langs:
