--- a/docs/docs-ref-autogen/visio/visio/visio.interfaces.shapedataitemcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.interfaces.shapedataitemcollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'visio!Visio.Interfaces.ShapeDataItemCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="baf45-101">一个用于更新 ShapeDataItemCollection 对象上的数据的接口，可用于 "shapeDataItemCollection （</span><span class="sxs-lookup"><span data-stu-id="baf45-101">An interface for updating data on the ShapeDataItemCollection object, for use in "shapeDataItemCollection.set(</span></span><!-- --><span data-ttu-id="baf45-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="baf45-102"></span></span><!-- --><span data-ttu-id="baf45-103">)".</span><span class="sxs-lookup"><span data-stu-id="baf45-103"></span></span>'
+    summary: '一个用于更新 ShapeDataItemCollection 对象上的数据的接口，可用于 "shapeDataItemCollection （<!-- -->{ ... }<!-- -->)".'
     name: Visio.Interfaces.ShapeDataItemCollectionUpdateData
     fullName: Visio.Interfaces.ShapeDataItemCollectionUpdateData
     langs:
