--- a/docs/docs-ref-autogen/visio/visio/visio.interfaces.shapeupdatedata.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.interfaces.shapeupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'visio!Visio.Interfaces.ShapeUpdateData:interface'
-    summary: '<span data-ttu-id="bbadf-101">用于更新 Shape 对象上的数据的接口，可用于 "shape. set （</span><span class="sxs-lookup"><span data-stu-id="bbadf-101">An interface for updating data on the Shape object, for use in "shape.set(</span></span><!-- --><span data-ttu-id="bbadf-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="bbadf-102"></span></span><!-- --><span data-ttu-id="bbadf-103">)".</span><span class="sxs-lookup"><span data-stu-id="bbadf-103"></span></span>'
+    summary: '用于更新 Shape 对象上的数据的接口，可用于 "shape. set （<!-- -->{ ... }<!-- -->)".'
     name: Visio.Interfaces.ShapeUpdateData
     fullName: Visio.Interfaces.ShapeUpdateData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'visio!Visio.Interfaces.ShapeUpdateData#view:member'
   - uid: 'visio!Visio.Interfaces.ShapeUpdateData#select:member'
     summary: |-
-      <span data-ttu-id="bbadf-104">如果选择形状，则返回 true。</span><span class="sxs-lookup"><span data-stu-id="bbadf-104">Returns true, if shape is selected.</span></span> <span data-ttu-id="bbadf-105">用户可以设置为 true，从而明确选择形状。</span><span class="sxs-lookup"><span data-stu-id="bbadf-105">User can set true to select the shape explicitly.</span></span>
+      如果选择形状，则返回 true。 用户可以设置为 true，从而明确选择形状。
 
-      <span data-ttu-id="bbadf-106">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="bbadf-106">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: select
     fullName: select
     langs:
@@ -28,9 +28,9 @@ items:
           - boolean
   - uid: 'visio!Visio.Interfaces.ShapeUpdateData#view:member'
     summary: |-
-      <span data-ttu-id="bbadf-107">返回形状的视图。</span><span class="sxs-lookup"><span data-stu-id="bbadf-107">Returns the view of the shape.</span></span>
+      返回形状的视图。
 
-      <span data-ttu-id="bbadf-108">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="bbadf-108">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: view
     fullName: view
     langs:
