--- a/docs/docs-ref-autogen/visio/visio/visio.interfaces.shapeviewloadoptions.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.interfaces.shapeviewloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'visio!Visio.Interfaces.ShapeViewLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="23129-101">表示 ShapeView 类。</span><span class="sxs-lookup"><span data-stu-id="23129-101">Represents the ShapeView class.</span></span>
+      表示 ShapeView 类。
 
-      <span data-ttu-id="23129-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="23129-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.Interfaces.ShapeViewLoadOptions
     fullName: Visio.Interfaces.ShapeViewLoadOptions
     langs:
@@ -27,9 +27,9 @@ items:
           - boolean
   - uid: 'visio!Visio.Interfaces.ShapeViewLoadOptions#highlight:member'
     summary: |-
-      <span data-ttu-id="23129-103">表示形状周围的突出显示内容。</span><span class="sxs-lookup"><span data-stu-id="23129-103">Represents the highlight around the shape.</span></span>
+      表示形状周围的突出显示内容。
 
-      <span data-ttu-id="23129-104">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="23129-104">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: highlight
     fullName: highlight
     langs:
