--- a/docs/docs-ref-autogen/visio/visio/visio.position.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.position.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'visio!Visio.Position:interface'
     summary: |-
-      <span data-ttu-id="8d763-101">表示对象在视图中的位置。</span><span class="sxs-lookup"><span data-stu-id="8d763-101">Represents the Position of the object in the view.</span></span>
+      表示对象在视图中的位置。
 
-      <span data-ttu-id="8d763-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="8d763-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.Position
     fullName: Visio.Position
     langs:
@@ -16,9 +16,9 @@ items:
       - 'visio!Visio.Position#y:member'
   - uid: 'visio!Visio.Position#x:member'
     summary: |-
-      <span data-ttu-id="8d763-103">指定对象的 X 坐标的整数，这是从视区中心到页面左边界的距离（以像素为单位）的有符号值。</span><span class="sxs-lookup"><span data-stu-id="8d763-103">An integer that specifies the x-coordinate of the object, which is the signed value of the distance in pixels from the viewport's center to the left boundary of the page.</span></span>
+      指定对象的 X 坐标的整数，这是从视区中心到页面左边界的距离（以像素为单位）的有符号值。
 
-      <span data-ttu-id="8d763-104">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="8d763-104">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: x
     fullName: x
     langs:
@@ -31,9 +31,9 @@ items:
           - number
   - uid: 'visio!Visio.Position#y:member'
     summary: |-
-      <span data-ttu-id="8d763-105">指定对象的 Y 坐标的整数，这是从视区中心到页面上边界的距离（以像素为单位）的有符号值。</span><span class="sxs-lookup"><span data-stu-id="8d763-105">An integer that specifies the y-coordinate of the object, which is the signed value of the distance in pixels from the viewport's center to the top boundary of the page.</span></span>
+      指定对象的 Y 坐标的整数，这是从视区中心到页面上边界的距离（以像素为单位）的有符号值。
 
-      <span data-ttu-id="8d763-106">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="8d763-106">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: 'y'
     fullName: 'y'
     langs:
