--- a/docs/docs-ref-autogen/visio/visio/visio.toolbartype.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.toolbartype.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'visio!Visio.ToolBarType:enum'
     summary: |-
-      <span data-ttu-id="8563b-101">应用程序的工具栏 Id</span><span class="sxs-lookup"><span data-stu-id="8563b-101">Toolbar IDs of the app</span></span>
+      应用程序的工具栏 Id
 
-      <span data-ttu-id="8563b-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="8563b-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.ToolBarType
     fullName: Visio.ToolBarType
     langs:
@@ -16,7 +16,7 @@ items:
       - 'visio!Visio.ToolBarType.pageNavigationBar:member'
       - 'visio!Visio.ToolBarType.statusBar:member'
   - uid: 'visio!Visio.ToolBarType.commandBar:member'
-    summary: <span data-ttu-id="8563b-103">CommandBar</span><span class="sxs-lookup"><span data-stu-id="8563b-103">CommandBar</span></span>
+    summary: CommandBar
     name: commandBar
     fullName: commandBar
     langs:
@@ -24,7 +24,7 @@ items:
     type: field
     numericValue: '"CommandBar"'
   - uid: 'visio!Visio.ToolBarType.pageNavigationBar:member'
-    summary: <span data-ttu-id="8563b-104">PageNavigationBar</span><span class="sxs-lookup"><span data-stu-id="8563b-104">PageNavigationBar</span></span>
+    summary: PageNavigationBar
     name: pageNavigationBar
     fullName: pageNavigationBar
     langs:
@@ -32,7 +32,7 @@ items:
     type: field
     numericValue: '"PageNavigationBar"'
   - uid: 'visio!Visio.ToolBarType.statusBar:member'
-    summary: <span data-ttu-id="8563b-105">StatusBar</span><span class="sxs-lookup"><span data-stu-id="8563b-105">StatusBar</span></span>
+    summary: StatusBar
     name: statusBar
     fullName: statusBar
     langs:
