--- a/docs/docs-ref-autogen/word/word/word.breaktype.yml
+++ b/docs/docs-ref-autogen/word/word/word.breaktype.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'word!Word.BreakType:enum'
     summary: |-
-      <span data-ttu-id="e4063-101">指定分页符的窗体。</span><span class="sxs-lookup"><span data-stu-id="e4063-101">Specifies the form of a break.</span></span>
+      指定分页符的窗体。
 
-      <span data-ttu-id="e4063-102">\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e4063-102">\[ [API set: WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: Word.BreakType
     fullName: Word.BreakType
     langs:
@@ -20,7 +20,7 @@ items:
       - 'word!Word.BreakType.sectionNext:member'
       - 'word!Word.BreakType.sectionOdd:member'
   - uid: 'word!Word.BreakType.line:member'
-    summary: <span data-ttu-id="e4063-103">换行符。</span><span class="sxs-lookup"><span data-stu-id="e4063-103">Line break.</span></span>
+    summary: 换行符。
     name: line
     fullName: line
     langs:
@@ -37,7 +37,7 @@ items:
     type: field
     numericValue: '"Next"'
   - uid: 'word!Word.BreakType.page:member'
-    summary: <span data-ttu-id="e4063-104">插入点处的分页符。</span><span class="sxs-lookup"><span data-stu-id="e4063-104">Page break at the insertion point.</span></span>
+    summary: 插入点处的分页符。
     name: page
     fullName: page
     langs:
@@ -45,7 +45,7 @@ items:
     type: field
     numericValue: '"Page"'
   - uid: 'word!Word.BreakType.sectionContinuous:member'
-    summary: <span data-ttu-id="e4063-105">新节不包含相应分页符。</span><span class="sxs-lookup"><span data-stu-id="e4063-105">New section without a corresponding page break.</span></span>
+    summary: 新节不包含相应分页符。
     name: sectionContinuous
     fullName: sectionContinuous
     langs:
@@ -53,7 +53,7 @@ items:
     type: field
     numericValue: '"SectionContinuous"'
   - uid: 'word!Word.BreakType.sectionEven:member'
-    summary: '<span data-ttu-id="e4063-p101">使下一节从下一偶数页开始的分节符。如果分节符落入偶数页，则 Word 将下一奇数页留为空白。</span><span class="sxs-lookup"><span data-stu-id="e4063-p101">Section break with the next section beginning on the next even-numbered page. If the section break falls on an even-numbered page, Word leaves the next odd-numbered page blank.</span></span>'
+    summary: 使下一节从下一偶数页开始的分节符。如果分节符落入偶数页，则 Word 将下一奇数页留为空白。
     name: sectionEven
     fullName: sectionEven
     langs:
@@ -61,7 +61,7 @@ items:
     type: field
     numericValue: '"SectionEven"'
   - uid: 'word!Word.BreakType.sectionNext:member'
-    summary: <span data-ttu-id="e4063-108">分节符在下一页。</span><span class="sxs-lookup"><span data-stu-id="e4063-108">Section break on next page.</span></span>
+    summary: 分节符在下一页。
     name: sectionNext
     fullName: sectionNext
     langs:
@@ -69,7 +69,7 @@ items:
     type: field
     numericValue: '"SectionNext"'
   - uid: 'word!Word.BreakType.sectionOdd:member'
-    summary: '<span data-ttu-id="e4063-p102">使下一节从下一奇数页开始的分节符。如果分节符落入奇数页，则 Word 将下一偶数页留为空白。</span><span class="sxs-lookup"><span data-stu-id="e4063-p102">Section break with the next section beginning on the next odd-numbered page. If the section break falls on an odd-numbered page, Word leaves the next even-numbered page blank.</span></span>'
+    summary: 使下一节从下一奇数页开始的分节符。如果分节符落入奇数页，则 Word 将下一偶数页留为空白。
     name: sectionOdd
     fullName: sectionOdd
     langs:
