--- a/docs/docs-ref-autogen/office/office/office.addin.yml
+++ b/docs/docs-ref-autogen/office/office/office.addin.yml
@@ -41,7 +41,7 @@ items:
           - 'office!Office.Addin#hide~0:complex'
         description: 当 UI 处于隐藏状态时解决的承诺。
   - uid: 'office!Office.Addin#onVisibilityModeChanged:member(1)'
-    summary: 为`onVisbilityModeChanged`事件添加侦听器。
+    summary: 为事件添加侦听器 `onVisbilityModeChanged` 。
     name: onVisibilityModeChanged(listener)
     fullName: onVisibilityModeChanged(listener)
     langs:
