--- a/docs/docs-ref-autogen/office/office/office.dialog.yml
+++ b/docs/docs-ref-autogen/office/office/office.dialog.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office!Office.Dialog:interface'
-    summary: 调用时`UI.displayDialogAsync`返回的对象。 它公开用于注册事件处理程序和关闭对话框的方法。
+    summary: 调用时返回的对象 `UI.displayDialogAsync` 。 它公开用于注册事件处理程序和关闭对话框的方法。
     remarks: '**要求集**： [DialogAPI](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/dialog-api-requirement-sets)'
     name: Office.Dialog
     fullName: Office.Dialog
