--- a/docs/docs-ref-autogen/office/office/office.dialogparentmessagereceivedeventargs.yml
+++ b/docs/docs-ref-autogen/office/office/office.dialogparentmessagereceivedeventargs.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'office!Office.DialogParentMessageReceivedEventArgs:interface'
     summary: |-
-      提供有关引发该`DialogParentMessageReceived`事件的父页面中的邮件的信息。
+      提供有关引发该事件的父页面中的邮件的信息 `DialogParentMessageReceived` 。
 
-      若要为`DialogParentMessageReceived`事件添加事件处理程序，请使用`addHandlerAsync` " [Office. UI](xref:office!Office.UI:interface) " 对象的方法。
+      若要为事件添加事件处理程序 `DialogParentMessageReceived` ，请使用 " `addHandlerAsync` [Office. UI](xref:office!Office.UI:interface) " 对象的方法。
     isPreview: true
     name: Office.DialogParentMessageReceivedEventArgs
     fullName: Office.DialogParentMessageReceivedEventArgs
