--- a/docs/docs-ref-autogen/office/office/office.documentselectionchangedeventargs.yml
+++ b/docs/docs-ref-autogen/office/office/office.documentselectionchangedeventargs.yml
@@ -12,7 +12,7 @@ items:
       - 'office!Office.DocumentSelectionChangedEventArgs#document:member'
       - 'office!Office.DocumentSelectionChangedEventArgs#type:member'
   - uid: 'office!Office.DocumentSelectionChangedEventArgs#document:member'
-    summary: '获取表示引发 SelectionChanged 事件的文档的[document 对象。](xref:office!Office.Document:interface)'
+    summary: '获取一个[Office.Document](xref:office!Office.Document:interface)对象，该对象表示引发 SelectionChanged 事件的文档。'
     name: document
     fullName: document
     langs:
