--- a/docs/docs-ref-autogen/outlook_1_7/outlook/office.mailboxenums.sourceproperty.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/outlook/office.mailboxenums.sourceproperty.yml
@@ -2,10 +2,10 @@
 items:
   - uid: 'outlook!Office.MailboxEnums.SourceProperty:enum'
     summary: |-
-      指定项目中所选数据的来源（有关详细信息`Office.mailbox.item.getSelectedDataAsync` ，请参阅）。
+      指定项目中所选数据的来源（ `Office.mailbox.item.getSelectedDataAsync` 有关详细信息，请参阅）。
 
       \[[API 集：邮箱 1.2](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    remarks: '**[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：撰写'
+    remarks: '**[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写'
     name: Office.MailboxEnums.SourceProperty
     fullName: Office.MailboxEnums.SourceProperty
     langs:
