commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.charttrendlinedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.charttrendlinedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartTrendlineData:interface'
-    summary: <span data-ttu-id="88b31-101">描述通过调用返回的数据的接口`chartTrendline.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="88b31-101">An interface describing the data returned by calling `chartTrendline.toJSON()`</span></span><!-- --><span data-ttu-id="88b31-102">.</span><span class="sxs-lookup"><span data-stu-id="88b31-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartTrendline.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartTrendlineData
     fullName: Excel.Interfaces.ChartTrendlineData
     langs:
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.Interfaces.ChartTrendlineData#type:member'
   - uid: 'excel!Excel.Interfaces.ChartTrendlineData#format:member'
     summary: |-
-      <span data-ttu-id="88b31-103">表示图表趋势线的格式。</span><span class="sxs-lookup"><span data-stu-id="88b31-103">Represents the formatting of a chart trendline.</span></span>
+      表示图表趋势线的格式。
 
-      <span data-ttu-id="88b31-104">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="88b31-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -32,9 +32,9 @@ items:
           - 'excel!Excel.Interfaces.ChartTrendlineFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ChartTrendlineData#intercept:member'
     summary: |-
-      <span data-ttu-id="88b31-105">表示趋势线的截距值。</span><span class="sxs-lookup"><span data-stu-id="88b31-105">Represents the intercept value of the trendline.</span></span> <span data-ttu-id="88b31-106">可以设置为数字值或空字符串（对于自动值）。</span><span class="sxs-lookup"><span data-stu-id="88b31-106">Can be set to a numeric value or an empty string (for automatic values).</span></span> <span data-ttu-id="88b31-107">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="88b31-107">The returned value is always a number.</span></span>
+      表示趋势线的截距值。 可以设置为数字值或空字符串（对于自动值）。 返回的值始终为数字。
 
-      <span data-ttu-id="88b31-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="88b31-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: intercept
     fullName: intercept
     langs:
@@ -47,9 +47,9 @@ items:
           - any
   - uid: 'excel!Excel.Interfaces.ChartTrendlineData#movingAveragePeriod:member'
     summary: |-
-      <span data-ttu-id="88b31-109">表示图表趋势线的周期。</span><span class="sxs-lookup"><span data-stu-id="88b31-109">Represents the period of a chart trendline.</span></span> <span data-ttu-id="88b31-110">仅适用于 MovingAverage 类型的趋势线。</span><span class="sxs-lookup"><span data-stu-id="88b31-110">Only applicable for trendline with MovingAverage type.</span></span>
+      表示图表趋势线的周期。 仅适用于 MovingAverage 类型的趋势线。
 
-      <span data-ttu-id="88b31-111">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="88b31-111">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: movingAveragePeriod
     fullName: movingAveragePeriod
     langs:
@@ -62,9 +62,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartTrendlineData#name:member'
     summary: |-
-      <span data-ttu-id="88b31-112">表示趋势线的名称。</span><span class="sxs-lookup"><span data-stu-id="88b31-112">Represents the name of the trendline.</span></span> <span data-ttu-id="88b31-113">可设为字符串值，或者设为 Null 值（表示自动值）。</span><span class="sxs-lookup"><span data-stu-id="88b31-113">Can be set to a string value, or can be set to null value represents automatic values.</span></span> <span data-ttu-id="88b31-114">返回的值始终为字符串</span><span class="sxs-lookup"><span data-stu-id="88b31-114">The returned value is always a string</span></span>
+      表示趋势线的名称。 可设为字符串值，或者设为 Null 值（表示自动值）。 返回的值始终为字符串
 
-      <span data-ttu-id="88b31-115">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="88b31-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -77,9 +77,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartTrendlineData#polynomialOrder:member'
     summary: |-
-      <span data-ttu-id="88b31-116">表示图表趋势线的顺序。</span><span class="sxs-lookup"><span data-stu-id="88b31-116">Represents the order of a chart trendline.</span></span> <span data-ttu-id="88b31-117">仅适用于具有多项式类型的趋势线。</span><span class="sxs-lookup"><span data-stu-id="88b31-117">Only applicable for trendline with Polynomial type.</span></span>
+      表示图表趋势线的顺序。 仅适用于具有多项式类型的趋势线。
 
-      <span data-ttu-id="88b31-118">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="88b31-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: polynomialOrder
     fullName: polynomialOrder
     langs:
@@ -92,9 +92,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartTrendlineData#type:member'
     summary: |-
-      <span data-ttu-id="88b31-119">表示图表趋势线的类型。</span><span class="sxs-lookup"><span data-stu-id="88b31-119">Represents the type of a chart trendline.</span></span>
+      表示图表趋势线的类型。
 
-      <span data-ttu-id="88b31-120">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="88b31-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
