--- a/docs/docs-ref-autogen/office/office/office.documentselectionchangedeventargs.yml
+++ b/docs/docs-ref-autogen/office/office/office.documentselectionchangedeventargs.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-    summary: <span data-ttu-id="50bb1-101">提供有关引发了 SelectionChanged 事件的文档的信息。</span><span class="sxs-lookup"><span data-stu-id="50bb1-101">Provides information about the document that raised the SelectionChanged event.</span></span>
+    summary: 提供有关引发了 SelectionChanged 事件的文档的信息。
     name: Office.DocumentSelectionChangedEventArgs
     fullName: Office.DocumentSelectionChangedEventArgs
     langs:
@@ -12,7 +12,7 @@ items:
       - 'office!Office.DocumentSelectionChangedEventArgs#document:member'
       - 'office!Office.DocumentSelectionChangedEventArgs#type:member'
   - uid: 'office!Office.DocumentSelectionChangedEventArgs#document:member'
-    summary: '<span data-ttu-id="50bb1-102">获取表示引发 SelectionChanged 事件的文档的[document 对象。](xref:office!Office.Document:interface)</span><span class="sxs-lookup"><span data-stu-id="50bb1-102">Gets an [Office.Document](xref:office!Office.Document:interface) object that represents the document that raised the SelectionChanged event.</span></span>'
+    summary: '获取一个[Office.Document](xref:office!Office.Document:interface)对象，该对象表示引发 SelectionChanged 事件的文档。'
     name: document
     fullName: document
     langs:
@@ -24,7 +24,7 @@ items:
         type:
           - 'office!Office.Document:interface'
   - uid: 'office!Office.DocumentSelectionChangedEventArgs#type:member'
-    summary: '<span data-ttu-id="50bb1-103">获取一个用于标识所引发事件的类型的[Office.](xref:office!Office.EventType:enum)事件枚举值。</span><span class="sxs-lookup"><span data-stu-id="50bb1-103">Get an [Office.EventType](xref:office!Office.EventType:enum) enumeration value that identifies the kind of event that was raised.</span></span>'
+    summary: '获取一个用于标识所引发事件的类型的[Office.](xref:office!Office.EventType:enum)事件枚举值。'
     name: type
     fullName: type
     langs:
