--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.tablestylecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.tablestylecollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TableStyleCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="ff3dd-101">一个用于更新 TableStyleCollection 对象上的数据的接口，可用于`tableStyleCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="ff3dd-101">An interface for updating data on the TableStyleCollection object, for use in `tableStyleCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="ff3dd-102">.</span><span class="sxs-lookup"><span data-stu-id="ff3dd-102"></span></span>'
+    summary: '一个用于更新 TableStyleCollection 对象上的数据的接口，可用于`tableStyleCollection.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.TableStyleCollectionUpdateData
     fullName: Excel.Interfaces.TableStyleCollectionUpdateData
     langs:
