--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.textconditionalformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.textconditionalformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.TextConditionalFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="5c193-101">代表特定的文本条件格式。</span><span class="sxs-lookup"><span data-stu-id="5c193-101">Represents a specific text conditional format.</span></span>
+      代表特定的文本条件格式。
 
-      <span data-ttu-id="5c193-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5c193-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.TextConditionalFormatLoadOptions
     fullName: Excel.Interfaces.TextConditionalFormatLoadOptions
     langs:
@@ -16,7 +16,7 @@ items:
       - 'excel!Excel.Interfaces.TextConditionalFormatLoadOptions#format:member'
       - 'excel!Excel.Interfaces.TextConditionalFormatLoadOptions#rule:member'
   - uid: 'excel!Excel.Interfaces.TextConditionalFormatLoadOptions#$all:member'
-    summary: '<span data-ttu-id="5c193-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="5c193-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="5c193-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="5c193-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="5c193-105">).</span><span class="sxs-lookup"><span data-stu-id="5c193-105"></span></span>'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TextConditionalFormatLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="5c193-106">返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="5c193-106">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span>
+      返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。
 
-      <span data-ttu-id="5c193-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5c193-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -44,9 +44,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.TextConditionalFormatLoadOptions#rule:member'
     summary: |-
-      <span data-ttu-id="5c193-108">条件格式的规则。</span><span class="sxs-lookup"><span data-stu-id="5c193-108">The rule of the conditional format.</span></span>
+      条件格式的规则。
 
-      <span data-ttu-id="5c193-109">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5c193-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rule
     fullName: rule
     langs:
