--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.textrangeloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.textrangeloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.TextRangeLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="6bd01-101">包含附加到形状上的文本，以及用于操作文本的属性和方法。</span><span class="sxs-lookup"><span data-stu-id="6bd01-101">Contains the text that is attached to a shape, in addition to properties and methods for manipulating the text.</span></span>
+      包含附加到形状上的文本，以及用于操作文本的属性和方法。
 
-      <span data-ttu-id="6bd01-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6bd01-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.TextRangeLoadOptions
     fullName: Excel.Interfaces.TextRangeLoadOptions
     langs:
@@ -16,7 +16,7 @@ items:
       - 'excel!Excel.Interfaces.TextRangeLoadOptions#font:member'
       - 'excel!Excel.Interfaces.TextRangeLoadOptions#text:member'
   - uid: 'excel!Excel.Interfaces.TextRangeLoadOptions#$all:member'
-    summary: '<span data-ttu-id="6bd01-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="6bd01-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="6bd01-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="6bd01-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="6bd01-105">).</span><span class="sxs-lookup"><span data-stu-id="6bd01-105"></span></span>'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TextRangeLoadOptions#font:member'
     summary: |-
-      <span data-ttu-id="6bd01-106">返回一个 ShapeFont 对象，该对象表示文本范围的字体属性。</span><span class="sxs-lookup"><span data-stu-id="6bd01-106">Returns a ShapeFont object that represents the font attributes for the text range.</span></span>
+      返回一个 ShapeFont 对象，该对象表示文本范围的字体属性。
 
-      <span data-ttu-id="6bd01-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6bd01-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -44,9 +44,9 @@ items:
           - 'excel!Excel.Interfaces.ShapeFontLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.TextRangeLoadOptions#text:member'
     summary: |-
-      <span data-ttu-id="6bd01-108">表示文本范围的纯文本内容。</span><span class="sxs-lookup"><span data-stu-id="6bd01-108">Represents the plain text content of the text range.</span></span>
+      表示文本范围的纯文本内容。
 
-      <span data-ttu-id="6bd01-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6bd01-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
