--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.timelinestylecollectiondata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.timelinestylecollectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TimelineStyleCollectionData:interface'
-    summary: <span data-ttu-id="ec94f-101">描述通过调用返回的数据的接口`timelineStyleCollection.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="ec94f-101">An interface describing the data returned by calling `timelineStyleCollection.toJSON()`</span></span><!-- --><span data-ttu-id="ec94f-102">.</span><span class="sxs-lookup"><span data-stu-id="ec94f-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`timelineStyleCollection.toJSON()`<!-- -->.
     name: Excel.Interfaces.TimelineStyleCollectionData
     fullName: Excel.Interfaces.TimelineStyleCollectionData
     langs:
