--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.timelinestylecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.timelinestylecollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TimelineStyleCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="35ff3-101">一个用于更新 TimelineStyleCollection 对象上的数据的接口，可用于`timelineStyleCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="35ff3-101">An interface for updating data on the TimelineStyleCollection object, for use in `timelineStyleCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="35ff3-102">.</span><span class="sxs-lookup"><span data-stu-id="35ff3-102"></span></span>'
+    summary: '一个用于更新 TimelineStyleCollection 对象上的数据的接口，可用于`timelineStyleCollection.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.TimelineStyleCollectionUpdateData
     fullName: Excel.Interfaces.TimelineStyleCollectionUpdateData
     langs:
