--- a/docs/docs-ref-autogen/office/office/office.dialogoptions.yml
+++ b/docs/docs-ref-autogen/office/office/office.dialogoptions.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office!Office.DialogOptions:interface'
-    summary: <span data-ttu-id="cf6d1-101">提供有关如何显示对话框的选项。</span><span class="sxs-lookup"><span data-stu-id="cf6d1-101">Provides options for how a dialog is displayed.</span></span>
+    summary: 提供有关如何显示对话框的选项。
     name: Office.DialogOptions
     fullName: Office.DialogOptions
     langs:
@@ -15,7 +15,7 @@ items:
       - 'office!Office.DialogOptions#promptBeforeOpen:member'
       - 'office!Office.DialogOptions#width:member'
   - uid: 'office!Office.DialogOptions#asyncContext:member'
-    summary: '<span data-ttu-id="cf6d1-102">在传递给回调的 AsyncResult 对象的 asyncContext 属性中返回的、任何类型的用户定义的项目未更改。</span><span class="sxs-lookup"><span data-stu-id="cf6d1-102">A user-defined item of any type that is returned, unchanged, in the asyncContext property of the AsyncResult object that is passed to a callback.</span></span>'
+    summary: 在传递给回调的 AsyncResult 对象的 asyncContext 属性中返回的、任何类型的用户定义的项目未更改。
     name: asyncContext
     fullName: asyncContext
     langs:
@@ -27,7 +27,7 @@ items:
         type:
           - any
   - uid: 'office!Office.DialogOptions#displayInIframe:member'
-    summary: '<span data-ttu-id="cf6d1-103">确定是否应在 IFrame 中显示对话框。</span><span class="sxs-lookup"><span data-stu-id="cf6d1-103">Determines whether the dialog box should be displayed within an IFrame.</span></span> <span data-ttu-id="cf6d1-104">此设置仅适用于 web 上的 Office，并被其他平台忽略。</span><span class="sxs-lookup"><span data-stu-id="cf6d1-104">This setting is only applicable in Office on the web, and is ignored by other platforms.</span></span> <span data-ttu-id="cf6d1-105">如果 false （默认值），对话框将显示为一个新的浏览器窗口（弹出窗口）。</span><span class="sxs-lookup"><span data-stu-id="cf6d1-105">If false (default), the dialog will be displayed as a new browser window (pop-up).</span></span> <span data-ttu-id="cf6d1-106">对于无法在 IFrame 中显示的身份验证页建议使用此值。</span><span class="sxs-lookup"><span data-stu-id="cf6d1-106">Recommended for authentication pages that cannot be displayed in an IFrame.</span></span> <span data-ttu-id="cf6d1-107">如果为 true，则对话框将显示为带有 IFrame 的浮动覆盖。</span><span class="sxs-lookup"><span data-stu-id="cf6d1-107">If true, the dialog will be displayed as a floating overlay with an IFrame.</span></span> <span data-ttu-id="cf6d1-108">对于用户体验和性能而言，这是最佳选择。</span><span class="sxs-lookup"><span data-stu-id="cf6d1-108">This is best for user experience and performance.</span></span>'
+    summary: 确定是否应在 IFrame 中显示对话框。 此设置仅适用于 web 上的 Office，并被其他平台忽略。 如果 false （默认值），对话框将显示为一个新的浏览器窗口（弹出窗口）。 对于无法在 IFrame 中显示的身份验证页建议使用此值。 如果为 true，则对话框将显示为带有 IFrame 的浮动覆盖。 对于用户体验和性能而言，这是最佳选择。
     name: displayInIframe
     fullName: displayInIframe
     langs:
@@ -39,7 +39,7 @@ items:
         type:
           - boolean
   - uid: 'office!Office.DialogOptions#height:member'
-    summary: <span data-ttu-id="cf6d1-109">以占当前显示器的百分比的形式，定义对话框的宽度。</span><span class="sxs-lookup"><span data-stu-id="cf6d1-109">Defines the width of the dialog as a percentage of the current display.</span></span> <span data-ttu-id="cf6d1-110">默认值为 80%。</span><span class="sxs-lookup"><span data-stu-id="cf6d1-110">Defaults to 80%.</span></span> <span data-ttu-id="cf6d1-111">下限为 250px。</span><span class="sxs-lookup"><span data-stu-id="cf6d1-111">250px minimum.</span></span>
+    summary: 以占当前显示器的百分比的形式，定义对话框的宽度。 默认值为 80%。 下限为 250px。
     name: height
     fullName: height
     langs:
@@ -52,9 +52,9 @@ items:
           - number
   - uid: 'office!Office.DialogOptions#promptBeforeOpen:member'
     summary: |-
-      <span data-ttu-id="cf6d1-112">确定是否将向用户显示弹出窗口阻止对话框。</span><span class="sxs-lookup"><span data-stu-id="cf6d1-112">Determines if the pop-up blocker dialog will be shown to the user.</span></span> <span data-ttu-id="cf6d1-113">默认值为 true。</span><span class="sxs-lookup"><span data-stu-id="cf6d1-113">Defaults to true.</span></span>
+      确定是否将向用户显示弹出窗口阻止对话框。 默认值为 true。
 
-      <span data-ttu-id="cf6d1-114">`true` - 框架显示用于触发导航的弹出窗口，并避开浏览器的弹出窗口阻止程序。</span><span class="sxs-lookup"><span data-stu-id="cf6d1-114">`true` - The framework displays a pop-up to trigger the navigation and avoid the browser's pop-up blocker.</span></span> <span data-ttu-id="cf6d1-115">`false` - 对话框不会显示，开发人员必须处理弹出窗口（通过提供用户界面项目来触发导航）。</span><span class="sxs-lookup"><span data-stu-id="cf6d1-115">`false` - The dialog will not be shown and the developer must handle pop-ups (by providing a user interface artifact to trigger the navigation).</span></span>
+      `true` - 框架显示用于触发导航的弹出窗口，并避开浏览器的弹出窗口阻止程序。 `false` - 对话框不会显示，开发人员必须处理弹出窗口（通过提供用户界面项目来触发导航）。
     name: promptBeforeOpen
     fullName: promptBeforeOpen
     langs:
@@ -66,7 +66,7 @@ items:
         type:
           - boolean
   - uid: 'office!Office.DialogOptions#width:member'
-    summary: <span data-ttu-id="cf6d1-116">以占当前显示器的百分比的形式，定义对话框的高度。</span><span class="sxs-lookup"><span data-stu-id="cf6d1-116">Defines the height of the dialog as a percentage of the current display.</span></span> <span data-ttu-id="cf6d1-117">默认值为 80%。</span><span class="sxs-lookup"><span data-stu-id="cf6d1-117">Defaults to 80%.</span></span> <span data-ttu-id="cf6d1-118">下限为 150px。</span><span class="sxs-lookup"><span data-stu-id="cf6d1-118">150px minimum.</span></span>
+    summary: 以占当前显示器的百分比的形式，定义对话框的高度。 默认值为 80%。 下限为 150px。
     name: width
     fullName: width
     langs:
