--- a/docs/docs-ref-autogen/office/office/office.documentmode.yml
+++ b/docs/docs-ref-autogen/office/office/office.documentmode.yml
@@ -1,8 +1,8 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office!Office.DocumentMode:enum'
-    summary: <span data-ttu-id="f1fbb-101">指定关联应用程序中的文档为只读，还是读写。</span><span class="sxs-lookup"><span data-stu-id="f1fbb-101">Specifies whether the document in the associated application is read-only or read-write.</span></span>
-    remarks: '<span data-ttu-id="f1fbb-102">由[Document](xref:office!Office.Document:interface)对象的 mode 属性返回。</span><span class="sxs-lookup"><span data-stu-id="f1fbb-102">Returned by the mode property of the [Document](xref:office!Office.Document:interface) object.</span></span>'
+    summary: 指定关联应用程序中的文档为只读，还是读写。
+    remarks: '由[Document](xref:office!Office.Document:interface)对象的 mode 属性返回。'
     name: Office.DocumentMode
     fullName: Office.DocumentMode
     langs:
@@ -13,14 +13,14 @@ items:
       - 'office!Office.DocumentMode.ReadOnly:member'
       - 'office!Office.DocumentMode.ReadWrite:member'
   - uid: 'office!Office.DocumentMode.ReadOnly:member'
-    summary: <span data-ttu-id="f1fbb-103">文档为只读。</span><span class="sxs-lookup"><span data-stu-id="f1fbb-103">The document is read-only.</span></span>
+    summary: 文档为只读。
     name: ReadOnly
     fullName: ReadOnly
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.DocumentMode.ReadWrite:member'
-    summary: <span data-ttu-id="f1fbb-104">可以读取和写入文档。</span><span class="sxs-lookup"><span data-stu-id="f1fbb-104">The document can be read and written to.</span></span>
+    summary: 可以读取和写入文档。
     name: ReadWrite
     fullName: ReadWrite
     langs:
