commit translated contents

--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.databarconditionalformatdata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.databarconditionalformatdata.yml
@@ -19,7 +19,7 @@ items:
       - 'excel!Excel.Interfaces.DataBarConditionalFormatData#upperBoundRule:member'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatData#axisColor:member'
     summary: |-
-      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的轴线的颜色的 HTML 颜色代码。 "" （空字符串）如果不存在或未设置轴。
+      代表 \# RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的轴线的颜色的 HTML 颜色代码。 "" （空字符串）如果不存在或未设置轴。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axisColor
@@ -64,7 +64,7 @@ items:
           - 'excel!Excel.Interfaces.DataBarConditionalFormatData#barDirection~0:complex'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatData#lowerBoundRule:member'
     summary: |-
-      构成数据栏的下限（以及如何计算，如果适用）的规则。 必须`ConditionalDataBarRule`将该对象设置为 JSON 对象（使用`x.lowerBoundRule = {...}` ，而不是`x.lowerBoundRule.formula = ...`<!-- -->).
+      构成数据栏的下限（以及如何计算，如果适用）的规则。 `ConditionalDataBarRule`必须将该对象设置为 JSON 对象（使用， `x.lowerBoundRule = {...}` 而不是`x.lowerBoundRule.formula = ...`<!-- -->).
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: lowerBoundRule
@@ -124,7 +124,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatData#upperBoundRule:member'
     summary: |-
-      构成数据栏的上限（以及如何计算，如果适用）的规则。 必须`ConditionalDataBarRule`将该对象设置为 JSON 对象（使用`x.upperBoundRule = {...}` ，而不是`x.upperBoundRule.formula = ...`<!-- -->).
+      构成数据栏的上限（以及如何计算，如果适用）的规则。 `ConditionalDataBarRule`必须将该对象设置为 JSON 对象（使用， `x.upperBoundRule = {...}` 而不是`x.upperBoundRule.formula = ...`<!-- -->).
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: upperBoundRule
