commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartmapoptionsupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartmapoptionsupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartMapOptionsUpdateData:interface'
-    summary: '<span data-ttu-id="b716f-101">一个用于更新 ChartMapOptions 对象上的数据的接口，可用于`chartMapOptions.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="b716f-101">An interface for updating data on the ChartMapOptions object, for use in `chartMapOptions.set({ ... })`</span></span><!-- --><span data-ttu-id="b716f-102">.</span><span class="sxs-lookup"><span data-stu-id="b716f-102"></span></span>'
+    summary: '一个用于更新 ChartMapOptions 对象上的数据的接口，可用于`chartMapOptions.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartMapOptionsUpdateData
     fullName: Excel.Interfaces.ChartMapOptionsUpdateData
     langs:
