--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.tablescopedcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.tablescopedcollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TableScopedCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="feae2-101">一个用于更新 TableScopedCollection 对象上的数据的接口，可用于`tableScopedCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="feae2-101">An interface for updating data on the TableScopedCollection object, for use in `tableScopedCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="feae2-102">.</span><span class="sxs-lookup"><span data-stu-id="feae2-102"></span></span>'
+    summary: '一个用于更新 TableScopedCollection 对象上的数据的接口，可用于`tableScopedCollection.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.TableScopedCollectionUpdateData
     fullName: Excel.Interfaces.TableScopedCollectionUpdateData
     langs:
