--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartlegendentryloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartlegendentryloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="38240-101">表示 legendEntryCollection 中的 legendEntry。</span><span class="sxs-lookup"><span data-stu-id="38240-101">Represents the legendEntry in legendEntryCollection.</span></span>
+      表示 legendEntryCollection 中的 legendEntry。
 
-      <span data-ttu-id="38240-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="38240-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartLegendEntryLoadOptions
     fullName: Excel.Interfaces.ChartLegendEntryLoadOptions
     langs:
@@ -15,7 +15,7 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#$all:member'
       - 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#$all:member'
-    summary: '<span data-ttu-id="38240-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="38240-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="38240-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="38240-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="38240-105">).</span><span class="sxs-lookup"><span data-stu-id="38240-105"></span></span>'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -28,9 +28,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#visible:member'
     summary: |-
-      <span data-ttu-id="38240-106">表示图表图例条目可见。</span><span class="sxs-lookup"><span data-stu-id="38240-106">Represents the visible of a chart legend entry.</span></span>
+      表示图表图例条目可见。
 
-      <span data-ttu-id="38240-107">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="38240-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
