commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.worksheetdeletedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.worksheetdeletedeventargs.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.WorksheetDeletedEventArgs:interface'
     summary: |-
-      <span data-ttu-id="0bb77-101">提供有关引发了已删除事件的工作表的信息。</span><span class="sxs-lookup"><span data-stu-id="0bb77-101">Provides information about the worksheet that raised the Deleted event.</span></span>
+      提供有关引发了已删除事件的工作表的信息。
 
-      <span data-ttu-id="0bb77-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0bb77-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.WorksheetDeletedEventArgs
     fullName: Excel.WorksheetDeletedEventArgs
     langs:
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.WorksheetDeletedEventArgs#worksheetId:member'
   - uid: 'excel!Excel.WorksheetDeletedEventArgs#source:member'
     summary: |-
-      <span data-ttu-id="0bb77-103">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="0bb77-103">Gets the source of the event.</span></span> <span data-ttu-id="0bb77-104">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="0bb77-104">See Excel.EventSource for details.</span></span>
+      获取事件源。 有关详细信息，请参阅 Excel.EventSource。
 
-      <span data-ttu-id="0bb77-105">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0bb77-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: source
     fullName: source
     langs:
@@ -32,9 +32,9 @@ items:
           - 'excel!Excel.WorksheetDeletedEventArgs#source~0:complex'
   - uid: 'excel!Excel.WorksheetDeletedEventArgs#type:member'
     summary: |-
-      <span data-ttu-id="0bb77-106">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="0bb77-106">Gets the type of the event.</span></span> <span data-ttu-id="0bb77-107">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="0bb77-107">See Excel.EventType for details.</span></span>
+      获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
-      <span data-ttu-id="0bb77-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0bb77-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -47,9 +47,9 @@ items:
           - '"WorksheetDeleted"'
   - uid: 'excel!Excel.WorksheetDeletedEventArgs#worksheetId:member'
     summary: |-
-      <span data-ttu-id="0bb77-109">获取已从工作簿删除的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="0bb77-109">Gets the id of the worksheet that is deleted from the workbook.</span></span>
+      获取已从工作簿删除的工作表的 ID。
 
-      <span data-ttu-id="0bb77-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0bb77-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheetId
     fullName: worksheetId
     langs:
