--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.chartunderlinestyle.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.chartunderlinestyle.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.ChartUnderlineStyle:enum'
-    summary: '<span data-ttu-id="c21a6-101">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c21a6-101">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.ChartUnderlineStyle
     fullName: Excel.ChartUnderlineStyle
     langs:
