--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartformatstringdata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartformatstringdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartFormatStringData:interface'
-    summary: <span data-ttu-id="0901c-101">描述通过调用返回的数据的接口`chartFormatString.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="0901c-101">An interface describing the data returned by calling `chartFormatString.toJSON()`</span></span><!-- --><span data-ttu-id="0901c-102">.</span><span class="sxs-lookup"><span data-stu-id="0901c-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartFormatString.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartFormatStringData
     fullName: Excel.Interfaces.ChartFormatStringData
     langs:
