--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.chartplotareadata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.chartplotareadata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaData:interface'
-    summary: <span data-ttu-id="e8baa-101">描述通过调用返回的数据的接口`chartPlotArea.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="e8baa-101">An interface describing the data returned by calling `chartPlotArea.toJSON()`</span></span><!-- --><span data-ttu-id="e8baa-102">.</span><span class="sxs-lookup"><span data-stu-id="e8baa-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartPlotArea.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartPlotAreaData
     fullName: Excel.Interfaces.ChartPlotAreaData
     langs:
