--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.conditionalrangeformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.conditionalrangeformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFormatUpdateData:interface'
-    summary: '<span data-ttu-id="19964-101">一个用于更新 ConditionalRangeFormat 对象上的数据的接口，可用于`conditionalRangeFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="19964-101">An interface for updating data on the ConditionalRangeFormat object, for use in `conditionalRangeFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="19964-102">.</span><span class="sxs-lookup"><span data-stu-id="19964-102"></span></span>'
+    summary: '一个用于更新 ConditionalRangeFormat 对象上的数据的接口，可用于`conditionalRangeFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ConditionalRangeFormatUpdateData
     fullName: Excel.Interfaces.ConditionalRangeFormatUpdateData
     langs:
