--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.stylecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.stylecollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.StyleCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="1d4f3-101">一个用于更新 StyleCollection 对象上的数据的接口，可用于`styleCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="1d4f3-101">An interface for updating data on the StyleCollection object, for use in `styleCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="1d4f3-102">.</span><span class="sxs-lookup"><span data-stu-id="1d4f3-102"></span></span>'
+    summary: '一个用于更新 StyleCollection 对象上的数据的接口，可用于`styleCollection.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.StyleCollectionUpdateData
     fullName: Excel.Interfaces.StyleCollectionUpdateData
     langs:
