--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.worksheetprotectionoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.worksheetprotectionoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.WorksheetProtectionOptions:interface'
     summary: |-
-      <span data-ttu-id="77672-101">代表工作表保护中的选项。</span><span class="sxs-lookup"><span data-stu-id="77672-101">Represents the options in sheet protection.</span></span>
+      代表工作表保护中的选项。
 
-      <span data-ttu-id="77672-102">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77672-102">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.WorksheetProtectionOptions
     fullName: Excel.WorksheetProtectionOptions
     langs:
@@ -28,9 +28,9 @@ items:
       - 'excel!Excel.WorksheetProtectionOptions#selectionMode:member'
   - uid: 'excel!Excel.WorksheetProtectionOptions#allowAutoFilter:member'
     summary: |-
-      <span data-ttu-id="77672-103">表示允许使用自动筛选功能的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="77672-103">Represents the worksheet protection option of allowing using auto filter feature.</span></span>
+      表示允许使用自动筛选功能的工作表保护选项。
 
-      <span data-ttu-id="77672-104">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77672-104">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowAutoFilter
     fullName: allowAutoFilter
     langs:
@@ -43,9 +43,9 @@ items:
           - boolean
   - uid: 'excel!Excel.WorksheetProtectionOptions#allowDeleteColumns:member'
     summary: |-
-      <span data-ttu-id="77672-105">表示允许删除列的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="77672-105">Represents the worksheet protection option of allowing deleting columns.</span></span>
+      表示允许删除列的工作表保护选项。
 
-      <span data-ttu-id="77672-106">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77672-106">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowDeleteColumns
     fullName: allowDeleteColumns
     langs:
@@ -58,9 +58,9 @@ items:
           - boolean
   - uid: 'excel!Excel.WorksheetProtectionOptions#allowDeleteRows:member'
     summary: |-
-      <span data-ttu-id="77672-107">表示允许删除行的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="77672-107">Represents the worksheet protection option of allowing deleting rows.</span></span>
+      表示允许删除行的工作表保护选项。
 
-      <span data-ttu-id="77672-108">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77672-108">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowDeleteRows
     fullName: allowDeleteRows
     langs:
@@ -73,9 +73,9 @@ items:
           - boolean
   - uid: 'excel!Excel.WorksheetProtectionOptions#allowEditObjects:member'
     summary: |-
-      <span data-ttu-id="77672-109">表示允许编辑对象的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="77672-109">Represents the worksheet protection option of allowing editing objects.</span></span>
+      表示允许编辑对象的工作表保护选项。
 
-      <span data-ttu-id="77672-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77672-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowEditObjects
     fullName: allowEditObjects
     langs:
@@ -88,9 +88,9 @@ items:
           - boolean
   - uid: 'excel!Excel.WorksheetProtectionOptions#allowEditScenarios:member'
     summary: |-
-      <span data-ttu-id="77672-111">表示允许编辑应用场景的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="77672-111">Represents the worksheet protection option of allowing editing scenarios.</span></span>
+      表示允许编辑应用场景的工作表保护选项。
 
-      <span data-ttu-id="77672-112">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77672-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowEditScenarios
     fullName: allowEditScenarios
     langs:
@@ -103,9 +103,9 @@ items:
           - boolean
   - uid: 'excel!Excel.WorksheetProtectionOptions#allowFormatCells:member'
     summary: |-
-      <span data-ttu-id="77672-113">表示允许格式化单元格的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="77672-113">Represents the worksheet protection option of allowing formatting cells.</span></span>
+      表示允许格式化单元格的工作表保护选项。
 
-      <span data-ttu-id="77672-114">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77672-114">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowFormatCells
     fullName: allowFormatCells
     langs:
@@ -118,9 +118,9 @@ items:
           - boolean
   - uid: 'excel!Excel.WorksheetProtectionOptions#allowFormatColumns:member'
     summary: |-
-      <span data-ttu-id="77672-115">表示允许格式化列的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="77672-115">Represents the worksheet protection option of allowing formatting columns.</span></span>
+      表示允许格式化列的工作表保护选项。
 
-      <span data-ttu-id="77672-116">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77672-116">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowFormatColumns
     fullName: allowFormatColumns
     langs:
@@ -133,9 +133,9 @@ items:
           - boolean
   - uid: 'excel!Excel.WorksheetProtectionOptions#allowFormatRows:member'
     summary: |-
-      <span data-ttu-id="77672-117">表示允许格式化行的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="77672-117">Represents the worksheet protection option of allowing formatting rows.</span></span>
+      表示允许格式化行的工作表保护选项。
 
-      <span data-ttu-id="77672-118">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77672-118">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowFormatRows
     fullName: allowFormatRows
     langs:
@@ -148,9 +148,9 @@ items:
           - boolean
   - uid: 'excel!Excel.WorksheetProtectionOptions#allowInsertColumns:member'
     summary: |-
-      <span data-ttu-id="77672-119">表示允许插入列的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="77672-119">Represents the worksheet protection option of allowing inserting columns.</span></span>
+      表示允许插入列的工作表保护选项。
 
-      <span data-ttu-id="77672-120">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77672-120">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowInsertColumns
     fullName: allowInsertColumns
     langs:
@@ -163,9 +163,9 @@ items:
           - boolean
   - uid: 'excel!Excel.WorksheetProtectionOptions#allowInsertHyperlinks:member'
     summary: |-
-      <span data-ttu-id="77672-121">表示允许插入超链接的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="77672-121">Represents the worksheet protection option of allowing inserting hyperlinks.</span></span>
+      表示允许插入超链接的工作表保护选项。
 
-      <span data-ttu-id="77672-122">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77672-122">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowInsertHyperlinks
     fullName: allowInsertHyperlinks
     langs:
@@ -178,9 +178,9 @@ items:
           - boolean
   - uid: 'excel!Excel.WorksheetProtectionOptions#allowInsertRows:member'
     summary: |-
-      <span data-ttu-id="77672-123">表示允许插入行的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="77672-123">Represents the worksheet protection option of allowing inserting rows.</span></span>
+      表示允许插入行的工作表保护选项。
 
-      <span data-ttu-id="77672-124">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77672-124">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowInsertRows
     fullName: allowInsertRows
     langs:
@@ -193,9 +193,9 @@ items:
           - boolean
   - uid: 'excel!Excel.WorksheetProtectionOptions#allowPivotTables:member'
     summary: |-
-      <span data-ttu-id="77672-125">表示允许使用数据透视表功能的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="77672-125">Represents the worksheet protection option of allowing using PivotTable feature.</span></span>
+      表示允许使用数据透视表功能的工作表保护选项。
 
-      <span data-ttu-id="77672-126">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77672-126">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowPivotTables
     fullName: allowPivotTables
     langs:
@@ -208,9 +208,9 @@ items:
           - boolean
   - uid: 'excel!Excel.WorksheetProtectionOptions#allowSort:member'
     summary: |-
-      <span data-ttu-id="77672-127">表示允许使用排序功能的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="77672-127">Represents the worksheet protection option of allowing using sort feature.</span></span>
+      表示允许使用排序功能的工作表保护选项。
 
-      <span data-ttu-id="77672-128">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77672-128">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowSort
     fullName: allowSort
     langs:
@@ -223,9 +223,9 @@ items:
           - boolean
   - uid: 'excel!Excel.WorksheetProtectionOptions#selectionMode:member'
     summary: |-
-      <span data-ttu-id="77672-129">表示选择模式的工作表保护选项。</span><span class="sxs-lookup"><span data-stu-id="77672-129">Represents the worksheet protection option of selection mode.</span></span>
+      表示选择模式的工作表保护选项。
 
-      <span data-ttu-id="77672-130">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77672-130">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: selectionMode
     fullName: selectionMode
     langs:
