--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.chartdeletedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.chartdeletedeventargs.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ChartDeletedEventArgs:interface'
     summary: |-
-      <span data-ttu-id="388aa-101">提供有关引发了已删除事件的图表的信息。</span><span class="sxs-lookup"><span data-stu-id="388aa-101">Provides information about the chart that raised the Deleted event.</span></span>
+      提供有关引发了已删除事件的图表的信息。
 
-      <span data-ttu-id="388aa-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="388aa-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartDeletedEventArgs
     fullName: Excel.ChartDeletedEventArgs
     langs:
@@ -18,9 +18,9 @@ items:
       - 'excel!Excel.ChartDeletedEventArgs#worksheetId:member'
   - uid: 'excel!Excel.ChartDeletedEventArgs#chartId:member'
     summary: |-
-      <span data-ttu-id="388aa-103">获取已从工作表删除的图表的 ID。</span><span class="sxs-lookup"><span data-stu-id="388aa-103">Gets the id of the chart that is deleted from the worksheet.</span></span>
+      获取已从工作表删除的图表的 ID。
 
-      <span data-ttu-id="388aa-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="388aa-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: chartId
     fullName: chartId
     langs:
@@ -33,9 +33,9 @@ items:
           - string
   - uid: 'excel!Excel.ChartDeletedEventArgs#source:member'
     summary: |-
-      <span data-ttu-id="388aa-105">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="388aa-105">Gets the source of the event.</span></span> <span data-ttu-id="388aa-106">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="388aa-106">See Excel.EventSource for details.</span></span>
+      获取事件源。 有关详细信息，请参阅 Excel.EventSource。
 
-      <span data-ttu-id="388aa-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="388aa-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: source
     fullName: source
     langs:
@@ -48,9 +48,9 @@ items:
           - 'excel!Excel.ChartDeletedEventArgs#source~0:complex'
   - uid: 'excel!Excel.ChartDeletedEventArgs#type:member'
     summary: |-
-      <span data-ttu-id="388aa-108">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="388aa-108">Gets the type of the event.</span></span> <span data-ttu-id="388aa-109">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="388aa-109">See Excel.EventType for details.</span></span>
+      获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
-      <span data-ttu-id="388aa-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="388aa-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -63,9 +63,9 @@ items:
           - '"ChartDeleted"'
   - uid: 'excel!Excel.ChartDeletedEventArgs#worksheetId:member'
     summary: |-
-      <span data-ttu-id="388aa-111">获取已在其中删除图表的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="388aa-111">Gets the id of the worksheet in which the chart is deleted.</span></span>
+      获取已在其中删除图表的工作表的 ID。
 
-      <span data-ttu-id="388aa-112">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="388aa-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheetId
     fullName: worksheetId
     langs:
